style: fix search field styles on mobile, add more styles to ErrorBlock component

--- a/src/assets/styles/_media.sass
+++ b/src/assets/styles/_media.sass
@@ -78,7 +78,7 @@
   .search
     margin: 15px 0 0
     order: 1
-    flex: 1 1 auto
+    flex: 1 1 100%
   .content
     &__items
       display: flex
