--- a/src/components/ErrorBlock/ErrorBlock.module.sass
+++ b/src/components/ErrorBlock/ErrorBlock.module.sass
@@ -7,12 +7,19 @@
   align-items: center
   justify-content: center
   flex-direction: column
+  gap: 30px
+  &_pic
+    flex: 0 0 auto
+    max-width: 300px
   &_title
     margin: 0
-    margin-bottom: 30px
     font-family: "Dodo Bold"
     text-align: center
     font-size: 40px
+  &_desc
+    font-family: "Dodo Regular"
+    font-size: 20px
+    text-align: center
   &_btn
     border-radius: 24px
     border: none
@@ -30,8 +37,20 @@
 
 @media ( max-width: 768px )
   .pgerr
+    min-height: 300px
+    gap: 15px
     &_title
-      margin-bottom: 20px
       font-size: 30px
+    &_desc
+      font-size: 16px
     &_btn
       font-size: 18px
+
+@media ( max-width: 420px )
+  .pgerr
+    &_pic
+      max-width: 200px
+    &_title
+      font-size: 22px
+    &_desc
+      font-size: 14px
